--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "node.js": "^0.0.1-security",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
